--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "axios": "^1.10.0",
     "dagre": "^0.8.5",
     "next": "^15.5.3",
     "react": "^19.0.0",
+    "react-contexify": "^6.0.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "^19.0.0",
     "reactflow": "^11.11.4",
     "uuid": "^13.0.0"
