--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "schemaflow",
+  "version": "1.0.0",
   "private": true,
+  "description": "Figma for Databases - Visual PostgreSQL Designer",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
-    "@dagrejs/dagre": "^1.1.5",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
+    "@glideapps/glide-data-grid": "^6.0.3",
     "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "axios": "^1.10.0",
-    "dagre": "^0.8.5",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.0",
+    "lodash": "^4.17.23",
+    "marked": "^17.0.1",
     "next": "15.5.7",
+    "papaparse": "^5.5.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-contexify": "^6.0.0",
-    "react-dnd": "^16.0.1",
     "react-dom": "^19.0.0",
-    "reactflow": "^11.11.4",
-    "uuid": "^13.0.0"
+    "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
+    "react-responsive-carousel": "^3.2.23",
+    "tailwind-merge": "^3.0.2",
+    "tldraw": "^4.3.1",
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
