--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "schemaflow",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
-  "description": "Figma for Databases - Visual PostgreSQL Designer",
+  "description": "Database Governance Platform - GitHub PR for Databases",
   "scripts": {
     "dev": "next dev --turbopack -p 3001",
     "build": "next build",
@@ -10,30 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@glideapps/glide-data-grid": "^6.0.3",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@xyflow/react": "^12.3.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.18.0",
-    "lodash": "^4.17.23",
-    "marked": "^17.0.1",
     "next": "15.5.7",
-    "papaparse": "^5.5.0",
-    "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
-    "react-contexify": "^6.0.0",
     "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
-    "react-responsive-carousel": "^3.2.23",
     "tailwind-merge": "^3.0.2",
-    "tldraw": "^4.3.1",
     "uuid": "^13.0.0",
     "zustand": "^5.0.3"
   },
